--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>E-Commerce in React and SnipCart</noscript>
+    <h1>E-Commerce in React and SnipCart</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
